--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <title>Lizard Sim</title>
+    <style>
+        #canvas1{
+            border: solid black 1px;
+        }
+    </style>
 </head>
 <body>
+    <Canvas id="canvas1" width="500px" height="500px"></Canvas>
     <button onclick="start()">Start</button>
 </body>
 </html>
