--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <script src="script.js"></script>
     <title>Lizard Sim</title>
     <style>
+        body{
+            background-color: darkgray;
+        }
+        #button1{
+            margin: auto;
+        }
         #canvas1{
             border: solid black 1px;
+            background-color: lightgray;
+            margin: auto;
         }
     </style>
 </head>
 <body>
     <Canvas id="canvas1" width="1200px" height="600px"></Canvas>
-    <button onclick="start()">Start</button>
+    <br>
+    <button id="button1" onclick="start()">Start</button>
 </body>
 </html>
