--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lizard Sim</title>
     <style>
-        body{
-            background-color: darkgray;
-        }
         #button1{
             margin: auto;
         }
-        #canvas1{
+        .canvas{
             border: solid black 1px;
-            background-color: lightgray;
-            margin: auto;
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 900px;
+            width: 1200px;
         }
         </style>
 </head>
 <body>
-    <Canvas id="canvas1" width="1800px" height="800px"></Canvas>
+    <Canvas class="canvas" id="LayerBottom"></Canvas>
+    <Canvas class="canvas" id="LayerTop"></Canvas>
     <br>
     <button id="button1" onclick="start()">Start</button>
     <script src="script.js"></script>
