--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lizard Sim</title>
     <style>
+        #LayerBottom{
+            background-color: lightgray;
+        }
         #button1{
             margin: auto;
             position: absolute;
