--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <Canvas class="canvas" id="LayerBottom" height="900px" width="1200px"></Canvas>
     <Canvas class="canvas" id="LayerTop" height="900px" width="1200px"></Canvas>
     <br>
-    <button id="button1" onclick="start()">Start</button>
+    <button id="button1" onclick="nuke()">NUKE</button>
     <script src="script.js"></script>
 </body>
 </html>
